Add partial outline of write_wib_hdf5.cxx

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(wib_hdf5_compress VERSION 0.0.1)
 find_package(daq-cmake REQUIRED)
 find_package(Boost COMPONENTS unit_test_framework REQUIRED)
 find_package(detdataformats REQUIRED)
+find_package(CLI11 REQUIRED)
 
 daq_setup_environment()
 
@@ -25,6 +26,6 @@ daq_add_library(LINK_LIBRARIES)
 
 ##############################################################################
 # Applications
-daq_add_application(write_wib_hdf5 write_wib_hdf5.cxx TEST LINK_LIBRARIES wib_hdf5_compress)
+daq_add_application(write_wib_hdf5 write_wib_hdf5.cxx TEST LINK_LIBRARIES wib_hdf5_compress CLI11::CLI11)
 
 daq_install()
