--- a/cmake/wib_hdf5_compressConfig.cmake.in
+++ b/cmake/wib_hdf5_compressConfig.cmake.in
@@ -4,6 +4,7 @@
 include(CMakeFindDependencyMacro)
 
 find_dependency(detdataformats)
+find_dependency(CLI11)
 
 if (EXISTS ${CMAKE_SOURCE_DIR}/@PROJECT_NAME@)
 
